# starfallcode

./: .gitignore  AI_CODE_MODIFICATION_IMPLEMENTATION.md  AI_CODE_MODIFICATION_QUICK_START.md  AI_CODE_MODIFICATION_WORKFLOW.md  AUGMENT_FUNCTION_CALLING_INTEGRATION.md  AUGMENT_QUICK_START.md  COMMAND_HINTS_GUIDE.md  COMPILATION_SUCCESS.md  CORE_ARCHITECTURE_ANALYSIS.md  CORE_MODULES_GUIDE.md  CORE_MODULES_QUICK_REFERENCE.md  Cargo.toml  DEBUG_HINTS.md  DOCUMENTATION_INDEX.md  FINAL_STATUS.md  FINAL_SUMMARY.md  INTEGRATION_PLAN.md  PRIORITY_3_ENHANCEMENTS.md  PROJECT_ROADMAP.md  PROMPTS_ARCHITECTURE.md  QUICK_FIX_REFERENCE.md  QUICK_REFERENCE.md  QWEN.md  README.md  README_DOCS.md  SMART_CHAT_DISPLAY_GUIDE.md  SMART_CHAT_QUICK_START.md  SOLUTION_SUMMARY.md  check_output.txt  setup_openai.sh  verify_config.sh
examples/copy-grokcli/grok-cli/: .gitignore  Cargo.toml  IMPLEMENTATION_CHECKLIST.md  README.md  STREAMING_ARCHITECTURE.md  STREAMING_COMPLETE.md  STREAMING_FIXED.md  STREAMING_IMPLEMENTATION.md  STREAMING_QUICK_START.md  STREAMING_SETUP.md
examples/copy-grokcli/grok-cli/src/: main.rs
examples/copy-grokcli/grok-cli/src/agent/: mod.rs  tests.rs
examples/copy-grokcli/grok-cli/src/commands/: mcp.rs  mod.rs
examples/copy-grokcli/grok-cli/src/grok/: client.rs  mod.rs  tests.rs
examples/copy-grokcli/grok-cli/src/mcp/: mod.rs
examples/copy-grokcli/grok-cli/src/tools/: mod.rs  tests.rs
examples/copy-grokcli/grok-cli/src/types/: mod.rs
examples/copy-grokcli/grok-cli/src/ui/: mod.rs
examples/copy-grokcli/grok-cli/src/utils/: mod.rs  settings_manager.rs
(+70 files in other folders)
