[package]
name = "grok-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI and command parsing
clap = { version = "4.0", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Terminal UI
crossterm = "0.28"
ratatui = "0.28"

# File operations
tokio-util = "0.7"
fs-err = "3.0"
walkdir = "2.3"

# Environment variables
dotenvy = "0.15"

# Configuration
config = "0.14"

# Logging
log = "0.4"
env_logger = "0.11"

# Crypto for unique IDs
uuid = { version = "1.0", features = ["v4"] }

# Async processing
futures = "0.3"
async-stream = "0.3"
reqwest-eventsource = "0.5"

# Terminal colors and formatting
console = "0.15"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Directory handling
dirs = "5.0"

# MCP (Model Context Protocol) support
# Note: No direct Rust MCP SDK exists, so we'll implement our own or find an alternative
